# ICRAS

./: .env.example  .gitignore  AGENTS.md  Capstone.txt  README.md  generate_sample_pdfs.py  main.py  pyproject.toml  requirements.txt  streamlit_app.py
agents/: __init__.py  anomaly_agent.py  compliance_agent.py  counterparty_agent.py  extraction_agent.py  intake_agent.py  orchestrator_agent.py  risk_agent.py  validation_agent.py
api/: __init__.py  app.py  bundle_builder.py
data/: vendor_master.csv
examples/: __init__.py  langchain_approval_brief.py
policies/: README.md
schemas/: __init__.py  anomaly_result.py  api_contract_review.py  approval_packet.py  common.py  compliance_result.py  context_packet.py  counterparty_result.py  document_inventory.py  evidence_index.py  exception_triage.py  extracted_clause.py  final_artifacts.py  finding.py  idempotency_result.py  jira_posting.py  obligation_result.py  policy_rules.py  posting_payload.py  risk_result.py  validation_result.py
tests/: __init__.py  test_anomaly_agent.py  test_api_contract_review.py  test_bundle_loader.py  test_compliance_agent.py  test_counterparty_agent.py  test_demo_scenarios.py  test_evidence_indexer.py  test_extraction_agent.py  test_idempotency.py  test_intake_agent.py  test_jira_posting.py  test_langchain_approval_brief.py  test_main_cli.py  test_obligation_register.py  test_orchestrator_agent.py  test_policy_rules.py  test_posting_payload_builder.py  test_risk_agent.py  test_run_manager.py  test_schemas.py  test_smoke_pipeline.py  test_streamlit_app.py  test_validation_agent.py
(+140 files in other folders)
