[project]
name = "icras"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0,<3.0",
    "pymupdf>=1.27.2.3",
    "pyyaml>=6.0,<7.0",
    "thefuzz>=0.22,<1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<9.0",
    "ruff>=0.15.17",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
]
