[project]
name = "icras"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "langchain-core>=1.4,<2.0",
    "langchain-openai>=1.2,<2.0",
    "langgraph>=1.2,<2.0",
    "langsmith>=0.4,<1.0",
    "pydantic>=2.0,<3.0",
    "pymupdf>=1.27.2.3",
    "python-multipart>=0.0.9,<1.0",
    "python-dotenv>=1.0,<2.0",
    "pyyaml>=6.0,<7.0",
    "streamlit>=1.37,<2.0",
    "thefuzz>=0.22,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<9.0",
    "ruff>=0.15.17",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
]
